--- a/package.json
+++ b/package.json
@@ -21,16 +21,21 @@
     "@rollup/plugin-commonjs": "22.0.0",
     "@rollup/plugin-node-resolve": "13.3.0",
     "@rollup/plugin-replace": "4.0.0",
+    "@stitches/react": "1.2.8",
     "@types/react": "18.0.12",
     "@types/react-dom": "18.0.5",
+    "autoprefixer": "10.4.7",
+    "postcss": "8.4.14",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "rollup": "2.75.6",
     "rollup-plugin-analyzer": "4.0.0",
     "rollup-plugin-delete": "2.0.0",
     "rollup-plugin-peer-deps-external": "2.2.4",
+    "rollup-plugin-scss": "3",
     "rollup-plugin-terser": "7.0.2",
     "rollup-plugin-typescript2": "0.32.1",
+    "sass": "1.52.2",
     "typescript": "4.7.3"
   },
   "peerDependencies": {
