--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,5 +25,12 @@
     "resolveJsonModule": true,
     "useUnknownInCatchVariables": false
   },
-  "include": ["src"]
+  "include": ["src"],
+  "exclude": [
+    "node_modules",
+    "build",
+    "dist",
+    "src/**/*.stories.tsx",
+    "src/**/*.test.tsx"
+  ]
 }
