--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
   "module": "dist/index.esm.js",
   "scripts": {
     "clean": "rm -Rf dist",
-    "prebuild": "npm run clean",
-    "build": "rollup -c --environment NODE_ENV:production",
-    "lint": "eslint --ext=tsx ./src ./__tests__",
+    "prebuild": "yarn run clean",
+    "build": "yarn run lint && rollup -c --environment NODE_ENV:production",
+    "lint": "eslint 'src/**/*.{js,ts,tsx}' --quiet --fix",
     "start": "rollup -cw",
     "test": "jest --coverage"
   },
@@ -21,11 +21,23 @@
     "@rollup/plugin-commonjs": "22.0.0",
     "@rollup/plugin-node-resolve": "13.3.0",
     "@rollup/plugin-replace": "4.0.0",
+    "@rollup/plugin-url": "7.0.0",
     "@stitches/react": "1.2.8",
+    "@svgr/rollup": "6.2.1",
+    "@types/jest": "28.1.1",
     "@types/react": "18.0.12",
     "@types/react-dom": "18.0.5",
+    "@typescript-eslint/eslint-plugin": "5.27.1",
+    "@typescript-eslint/parser": "5.27.1",
     "autoprefixer": "10.4.7",
+    "eslint": "8.17.0",
+    "eslint-config-prettier": "8.5.0",
+    "eslint-plugin-prettier": "4.0.0",
+    "eslint-plugin-react": "7.30.0",
+    "eslint-plugin-react-hooks": "4.5.0",
+    "jest": "28.1.1",
     "postcss": "8.4.14",
+    "prettier": "2.6.2",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "rollup": "2.75.6",
@@ -36,6 +48,7 @@
     "rollup-plugin-terser": "7.0.2",
     "rollup-plugin-typescript2": "0.32.1",
     "sass": "1.52.2",
+    "ts-jest": "28.0.4",
     "typescript": "4.7.3"
   },
   "peerDependencies": {
