--- a/package.json
+++ b/package.json
@@ -18,38 +18,39 @@
     "test": "jest --coverage"
   },
   "devDependencies": {
-    "@rollup/plugin-commonjs": "22.0.0",
+    "@rollup/plugin-babel": "5.3.1",
+    "@rollup/plugin-commonjs": "22.0.1",
     "@rollup/plugin-node-resolve": "13.3.0",
     "@rollup/plugin-replace": "4.0.0",
     "@rollup/plugin-url": "7.0.0",
     "@stitches/react": "1.2.8",
-    "@svgr/rollup": "6.2.1",
-    "@types/jest": "28.1.1",
-    "@types/react": "18.0.12",
-    "@types/react-dom": "18.0.5",
-    "@typescript-eslint/eslint-plugin": "5.27.1",
-    "@typescript-eslint/parser": "5.27.1",
+    "@svgr/rollup": "6.3.0",
+    "@types/jest": "28.1.6",
+    "@types/react": "18.0.15",
+    "@types/react-dom": "18.0.6",
+    "@typescript-eslint/eslint-plugin": "5.30.7",
+    "@typescript-eslint/parser": "5.30.7",
     "autoprefixer": "10.4.7",
-    "eslint": "8.17.0",
+    "eslint": "8.20.0",
     "eslint-config-prettier": "8.5.0",
-    "eslint-plugin-prettier": "4.0.0",
-    "eslint-plugin-react": "7.30.0",
-    "eslint-plugin-react-hooks": "4.5.0",
-    "jest": "28.1.1",
+    "eslint-plugin-prettier": "4.2.1",
+    "eslint-plugin-react": "7.30.1",
+    "eslint-plugin-react-hooks": "4.6.0",
+    "jest": "28.1.3",
     "postcss": "8.4.14",
-    "prettier": "2.6.2",
-    "react": "18.1.0",
-    "react-dom": "18.1.0",
-    "rollup": "2.75.6",
+    "prettier": "2.7.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "rollup": "2.77.0",
     "rollup-plugin-analyzer": "4.0.0",
     "rollup-plugin-delete": "2.0.0",
     "rollup-plugin-peer-deps-external": "2.2.4",
     "rollup-plugin-scss": "3",
     "rollup-plugin-terser": "7.0.2",
     "rollup-plugin-typescript2": "0.32.1",
-    "sass": "1.52.2",
-    "ts-jest": "28.0.4",
-    "typescript": "4.7.3"
+    "sass": "1.53.0",
+    "ts-jest": "28.0.7",
+    "typescript": "4.7.4"
   },
   "peerDependencies": {
     "react": "^16.8 || ^17.0 || ^18.0",
